# another_maze_pather

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
include/: a_star.h  calc_g.h  calc_h.h  edit_tile_array.h  find_neighbours.h  global_defines.h  grid_manipulator.h  grid_objects.h  init_pathfinder.h  mouse_input.h  pathfind.h  set_tile.h
src/: calc_g.c  calc_h.c  edit_tile_array.c  find_neighbours.c  grid_manipulator.c  init_pathfinder.c  main.c  mouse_input.c  pathfind.c  set_tile.c
